--- a/package.json
+++ b/package.json
@@ -18,9 +18,13 @@
     "@mui/material": "^5.15.14",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@mui/x-date-pickers": "^7.1.0",
+    "mui-one-time-password-input": "^2.0.2",
+    "otp-input-react": "^0.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-otp-input": "^3.1.1",
     "react-router-dom": "^6.22.3",
+    "react18-input-otp": "^1.1.4",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
