--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "generate:types": "supabase gen types typescript --project-id bwceqbjbdoivpylafrvr --schema public > ./src/types/supabase.ts"
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
@@ -18,16 +19,21 @@
     "@mui/material": "^5.15.14",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@mui/x-date-pickers": "^7.1.0",
+    "@supabase/supabase-js": "^2.42.0",
+    "env-cmd": "^10.1.0",
     "mui-one-time-password-input": "^2.0.2",
     "otp-input-react": "^0.3.0",
+    "process": "^0.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-otp-input": "^3.1.1",
     "react-router-dom": "^6.22.3",
     "react18-input-otp": "^1.1.4",
-    "styled-components": "^6.1.8"
+    "styled-components": "^6.1.8",
+    "supabase": "^1.153.4"
   },
   "devDependencies": {
+    "@types/node": "^20.12.4",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
