--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "@mui/material": "^5.15.14",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@mui/x-date-pickers": "^7.1.0",
+    "@react-email/render": "^0.0.12",
     "@supabase/supabase-js": "^2.42.0",
     "env-cmd": "^10.1.0",
     "mui-one-time-password-input": "^2.0.2",
+    "nodemailer": "^6.9.13",
     "otp-input-react": "^0.3.0",
     "process": "^0.11.10",
     "react": "^18.2.0",
