--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,5 @@
 {
   "rewrites": [
-    {
-      "source": "/((?!api/.*).*)",
-      "destination": "/index.html"
-    }
+      { "source": "/((?!api/.*).*)", "destination": "/" }
   ]
 }
